[gd_scene load_steps=10 format=2]

[ext_resource path="res://font/Pixeled.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 44
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 44
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 82
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 59
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 59
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 22
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="BotonStart" type="Button" parent="."]
margin_left = 255.763
margin_top = 521.945
margin_right = 778.763
margin_bottom = 662.945
custom_fonts/font = SubResource( 1 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 692.911
margin_top = -27.4802
margin_right = 1014.91
margin_bottom = 269.52
custom_fonts/font = SubResource( 2 )
text = "0
"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestScore" type="Label" parent="."]
visible = false
margin_left = 17.4472
margin_top = 602.464
margin_right = 493.447
margin_bottom = 1067.46
custom_fonts/font = SubResource( 3 )
text = "Best: 0
"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="EtiquetaPausa" type="Label" parent="."]
visible = false
margin_left = 320.0
margin_top = 80.0
margin_right = 730.0
margin_bottom = 545.0
custom_fonts/font = SubResource( 4 )
text = "PAUSE
"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Title1" type="Label" parent="."]
anchor_right = 0.473
margin_left = 149.8
margin_top = -12.6516
margin_right = 405.448
margin_bottom = 491.348
rect_clip_content = true
custom_fonts/font = SubResource( 5 )
text = "Starship"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title2" type="Label" parent="."]
margin_left = 384.732
margin_top = 78.1175
margin_right = 640.38
margin_bottom = 582.118
rect_clip_content = true
custom_fonts/font = SubResource( 6 )
text = "vs
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title3" type="Label" parent="."]
anchor_right = 0.473
margin_left = 149.8
margin_top = 174.217
margin_right = 405.448
margin_bottom = 678.217
rect_clip_content = true
custom_fonts/font = SubResource( 5 )
text = "Asteroids

"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameDev" type="Label" parent="."]
anchor_left = 0.052
anchor_right = 0.183
anchor_bottom = 0.102
margin_left = -153.248
margin_top = 627.397
margin_right = 468.608
margin_bottom = 687.957
custom_fonts/font = SubResource( 7 )
text = "Created for: Joshua Carrera"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BotonStart" to="." method="_on_BotonStart_pressed"]
